welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:15: error: not found: value color
      if (getCouleurSol()==color.green)
                           ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    while (!(test))
    ^