welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
var test = false

def isFacingTrail():Boolean = {
  test = false
  if (estFaceMur())
  {
    return false
  }
  else
  {
    while (!(test))
    {
      avance()
      if (getCouleurSol()==color.green)
      {
        test = true
        recule()
      }
      else
      {
        recule()
        gauche()
      }
    }
  }
}